<resources>
    <string name="app_name">Ruddle</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password or email is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to register -->
    <string name="prompt_name">Username</string>
    <string name="register">Register</string>
    <string name="action_register">Register</string>

    <!-- Strings related to Navigation View -->
    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_new_post">New Post</string>
    <string name="navigation_in_progress">in Progress</string>

    <!-- Strings related to Profile Fragment -->
    <string name="profile_button_change_picture">Change profile picture</string>
    <string name="header_button_change_picture">Change header picture</string>
    <string name="profile_button_in_progress">In progress</string>
    <string name="profile_button_created">Created</string>
    <string name="profile_button_solved">Solved</string>
    <string name="profile_button_log_out">Log out</string>

    <string name="profile_icon">Profile icon</string>
    <string name="profile_header_cover">Header cover</string>

    <!-- Strings related to New post activity -->
    <string name="new_post_button_submit">Submit</string>
    <string name="new_post_hint_title">Title</string>
    <string name="new_post_hint_body">Body</string>
    <string name="new_post_hint_answer">Answer</string>

    <!-- Strings related to Post Activity -->
    <string name="post_username">Username</string>
    <string name="post_title">Title</string>
    <string name="post_body">Body</string>
    <string name="post_answer_hint">Enter answer</string>
    <string name="post_submit">Submit</string>
    <string name="post_inprogress">In Progress</string>

    <!-- Strings related to Main menu-->
    <string name="search">Search</string>
    <string name="sort">Sort by</string>
    <string name="settings">Settings</string>
    <string name="sory_by_date">Date</string>
    <string name="sory_by_difficulty">Difficulty</string>
    <string name="sory_by_times_solved">Times solved</string>

    <!-- Strings related to Post layout -->
    <string name="profile_pic_desc">UserPic</string>
    <string name="example_desc">Description</string>
    <string name="example_title">Example post title</string>

</resources>
